# matstat

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  package-lock.json  spin.toml  tailwind.config.js
.github/workflows/: deploy.yaml  spin-deploy.yaml
src/: lib.rs  main.rs
src/components/plot/: mod.rs
src/models/: func_data.rs  mod.rs  params.rs  point_2d.rs  table.rs
src/tasks/: mod.rs  ms1.rs
src/tasks/ms/: mod.rs
src/tasks/ms/ms1/: data_processing.rs  formula.rs  mod.rs  params.rs  plot.rs  structs.rs  table.rs  themes.rs
src/tasks/ms1/: data_processing.rs  formula.rs  mod.rs  plot.rs  structs.rs  table.rs
