[package]
name = "ms"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
plotters = "^0.3.2"
plotters-canvas = "^0.3.0"
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
