[package]
name = "ms"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr", "nightly"] }
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
charming = { version = "0.3.1", features = ["wasm"] }
web-sys = { version = "0.3.67", features = ["Element", "HtmlElement", "HtmlDivElement"] }
regex = "1.10.6"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.70"
